Version 2.02.51 - 
================================

Version 2.02.50 - 28th July 2009
================================
  Change test/api/test.c prompt so it's not confused with the main lvm prompt.
  Update liblvm unit tests in test/api to cover latest liblvm changes.
  Add unimplemented lvm_lv_resize and lvm_pv_resize skeletons to liblvm.
  Add lvm_library_get_version to liblvm.
  Add lvm_config_override to liblvm to allow caller to override LVM config.
  Add lvm_lv_is_active and lvm_lv_is_suspended to liblvm.
  Add lvm_lv_activate and lvm_lv_deactivate to liblvm.
  Add lvm_scan, lvm_vg_reduce and lvm_vg_remove_lv to liblvm.
  Add functions to get numeric properties to liblvm.
  Add lvm_{pv|vg|lv}_get_{name|uuid} to liblvm.
  Add lvm_vg_list_pvs and lvm_vg_list_lvs to liblvm.
  Add lvm_vg_open and lvm_vg_create_lv_linear to liblvm.
  Add lvm_list_vg_names/uuids to liblvm.
  Add lvm_errno and lvm_errmsg to liblvm to obtain failure information.
  Rename lvm_create/destroy to lvm_init/quit.
  Rename lvm_reload_config to lvm_config_reload.
  Refactor _override_settings to use new override_config_tree_from_string.
  Add vg_reduce to metadata.c and metadata-exported.h.
  Update lvm.h to clarify API behavior and return codes.
  Update lvm_vg_extend to do an implicit pvcreate on the device.
  Update display.c to use vg_free(vg) instead of duplicating the calculation.
  Refactor vg_size, vg_free, and pv_mda_count field calculations for liblvm.
  Refactor pvcreate and lvcreate for liblvm.
  Add global/wait_for_locks to lvm.conf so blocking for locks can be disabled.
  All LV locks are non-blocking so remove LCK_NONBLOCK from separate macros.
  Fix race condition with vgcreate and vgextend on same device (2.02.49).
  Remove redundant validate_name call from vgreduce.
  Remove unused handles lvseg, pvseg inside liblvm/lvm.h.
  Add liblvm2app Makefile installation targets.
  Add liblvm pkgconfig file.